// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Flex Column Direction 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS ictdbZ"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS kXuowN"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Flex On Children 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS gbmrba"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn hKUJNt sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Justified 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS jXjVxB"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Flex Wrap 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 cNraFD sc-eFuaqX iXQyXF"
  >
    <div
      class="sc-gKseQn cOdZAq sc-iBPTik bqhgIB sc-hHfuMS gbmrba"
    >
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik fmXMFd"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eevTxM"
        style="height: 200px; width: 200px;"
      />
      <div
        class="sc-gKseQn cOdZAq sc-iBPTik eVxcdR"
        style="height: 200px; width: 200px;"
      />
    </div>
  </div>
</div>
`;
